--- a/configuration/accounts/production/application.yml
+++ b/configuration/accounts/production/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 7777
+accounts:
+  datasource:
+    url: jdbc:mysql://localhost:3306/accounts
+    username: root
+    password: password1234
+    ddl-mode: update
