--- a/configuration/accounts/production/application.yml
+++ b/configuration/accounts/production/application.yml
@@ -6,4 +6,4 @@ accounts:
     username: root
     password: password1234
     ddl-mode: update
-  allow-get-accounts: false
+  allow-get-accounts: true
